--- a/gallery.html
+++ b/gallery.html
@@ -55,7 +55,7 @@
     <div class="gallery-divider"></div>
     <div>
       <h3 class="gallery-title">Data Visualization for Campus Energy Management</h3>
-      <p class="proj-text">Designed and Developed a website for visualizing campus energy consumption using echarts.js and d3.js.</p><img sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" src="images/gallery4.png" srcset="images/gallery4-p-500x214.png 500w, images/gallery4-p-800x343.png 800w, images/gallery4-p-1080x462.png 1080w, images/gallery4-p-1600x685.png 1600w, images/gallery4.png 1946w">
+      <p class="proj-text">Designed and developed a website for visualizing campus energy consumption using Echarts.js and D3.js.</p><img sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" src="images/gallery4.png" srcset="images/gallery4-p-500x214.png 500w, images/gallery4-p-800x343.png 800w, images/gallery4-p-1080x462.png 1080w, images/gallery4-p-1600x685.png 1600w, images/gallery4.png 1946w">
     </div>
   </div>
   <div class="center-box socialmedia-box gallery-footer"><a class="socialmedia-link" href="mailto:qz265@cornell.edu">Email</a><a class="socialmedia-link" href="https://www.linkedin.com/in/qinwei-zhu-116427129" target="_blank">LinkedIn</a><a class="socialmedia-link" href="https://medium.com/@qinweizhu" target="_blank">Medium</a><a class="socialmedia-link" href="https://www.instagram.com/qinweizzz/" target="_blank">Instagram</a>
