--- a/kitchem.html
+++ b/kitchem.html
@@ -151,7 +151,7 @@
       </ol>
       <p class="proj-text">We considered the observation to be a helpful behavior because it is required when learning balancing chemical equations. Also, it helps beginners understand atoms and molecule. So it is appropriate to keep the gameplay for beginning levels. However, to teach users to hit the right coefficients directly, new gameplay need to be introduced.</p>
       <h4 class="proj-section-title">Three significant problems in the second iteration</h4>
-      <blockquote class="quote"><span class="quote-text">Design the progression of the gameplay to help users think&nbsp;mathematically and hit the right coefficient at one time.</span>
+      <blockquote class="quote"><span class="quote-text">Design the progression of the gameplay to help users think&nbsp;mathematically and hit the correct coefficient at one time.</span>
       </blockquote>
       <p class="proj-text">The major problem of the former gameplay is that it allows users to try out by adding 1 to the coefficient. We thought of eliminating the clicking interaction by having users to type in to coefficient directly. Thus, we designed typing levels as the second phase after the clicking levels, it works like this:</p>
       <div class="kitchem-background-box">
@@ -174,7 +174,7 @@
         </video>
       </div>
       <div class="proj-pic-title">- Text Checking Levels -</div>
-      <blockquote class="quote"><span class="quote-text">Arrange the order of the levels with reinforcement took into consideration</span>
+      <blockquote class="quote"><span class="quote-text">Arrange the order of the levels with the concept of reinforcement</span>
       </blockquote>
       <p class="proj-text">Now, the game became complicated because it has two progression going on, which means during the game, we need to introduce new user interactions, new methods of balancing chemical equations as well as concreteness fading.</p>
       <div class="kitchem-background-box"><img class="kitchem-img" sizes="(max-width: 479px) 57vw, (max-width: 767px) 58vw, (max-width: 991px) 436.796875px, 564px" src="images/gameplay.001.jpeg" srcset="images/gameplay.001-p-500x375.jpeg 500w, images/gameplay.001-p-800x600.jpeg 800w, images/gameplay.001.jpeg 1024w">
@@ -184,7 +184,7 @@
       <div class="kitchem-background-box"><img class="kitchem-img" sizes="(max-width: 479px) 57vw, (max-width: 767px) 58vw, (max-width: 991px) 436.796875px, 564px" src="images/level.png" srcset="images/level-p-500x678.png 500w, images/level-p-800x1084.png 800w, images/level.png 1018w">
       </div>
       <div class="proj-pic-title">- The Order of Levels -</div>
-      <blockquote class="quote"><span style="font-size: 20px;">Add a story line to solve the conflict between chemistry and cooking</span>
+      <blockquote class="quote"><span style="font-size: 20px;">Add a story line to bridge chemistry and cooking</span>
       </blockquote>
       <p class="proj-text">As we brought new concepts to teach chemistry, the conflicts between a cooking game and a educational chemistry games shows up again, the game does not look fun and even not make sense to some extent. We add a story line to let the game make more sense.</p>
       <div class="quote-box">
