--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         <div class="circle-column1 w-col w-col-7">
           <blockquote class="quote-text">How I see myself</blockquote>
           <p class="about-intro">Just like those concentric circles! The outside me is active. I enjoy design, learning, sports and adventure.
-            <br>The middle me is contemplative. I observe, communicate, think, reflect, and deal with problems.
+            <br>The middle me is contemplative. I observe, communicate, think, reflect, and solve problems.
             <br>The inner me, I keep it solid and simple. It is my sincere desire to serve the great and bring happiness to people.</p>
         </div>
         <div class="circle-column2 w-col w-col-5">
@@ -61,7 +61,7 @@
       <div class="w-row">
         <div class="circle-column1 w-col w-col-7">
           <blockquote class="quote-text">How I see design</blockquote>
-          <p class="about-intro">Design is the same thing. People get to know a design by it's functionality and appearance, use it when the design solves their problem or meet their needs, but have faith in it only when the value it brings is communicated.
+          <p class="about-intro">People get to know a design by it's functionality and appearance. They use it when the design solves their problem or meets their needs. However, they love it only when the value it brings is communicated.
             <br>I aspire to design experience that thrives from the function to the value.</p>
         </div>
         <div class="circle-column2 w-col w-col-5">
