--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="intro-container w-container">
       <h1 class="introemoji">🎉</h1>
       <h1 class="intro-text1">I design to bring delightful and easy-to-use experiences.</h1>
-      <p class="intro-text2">Hi, I’m Qinwei, a thoughtful design thinker and also a passionate implementer. Currently, I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. Previously, I interned at&nbsp;<span class="intro-highlight">IBM</span> and did my bachelor's degree in <span>Beijing University of Posts and Telecommunications</span>.&nbsp;</p>
+      <p class="intro-text2">Hi, I’m Qinwei, a thoughtful design thinker and also a passionate implementer. Currently, I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. Previously, I interned at&nbsp;<span class="intro-highlight">IBM</span> and <span class="intro-highlight">a Start-up called Bri Studio</span> I got my bachelor's degree in <span>Beijing University of Posts and Telecommunications</span>.&nbsp;</p>
       <p class="section-title">------
         <br><span class="intro-highlight">With <span xmlns="http://www.w3.org/1999/xhtml" class="intro-highlight intro-highlight-colored">my projects</span>,&nbsp;I'm iterating myself to become a better designer &gt;&gt;&gt;</span>
       </p>
@@ -60,7 +60,7 @@
       <div class="w-col w-col-1"></div>
       <div class="w-col w-col-5"><img class="project1-img" src="images/proj1.1-svg.svg">
       </div>
-      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="witus.html"><h3 class="project-heading">Working in the U.S.&nbsp;</h3><p class="project-description">How I use user-centered design to help international students find work authorization info with a simple browser extension.</p></a><a class="project-button w-button" href="witus.html">Read more</a>
+      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="witus.html"><h3 class="project-heading">WITUS&nbsp;</h3><p class="project-description">I designed user-centered web application to help international students find work authorization information.</p></a><a class="project-button w-button" href="witus.html">Read more</a>
       </div>
       <div class="w-col w-col-1"></div>
     </div>
@@ -70,7 +70,7 @@
       <div class="w-col w-col-1"></div>
       <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/Kitchem.png" srcset="images/Kitchem-p-500x291.png 500w, images/Kitchem-p-800x465.png 800w, images/Kitchem-p-1080x628.png 1080w, images/Kitchem-p-1600x930.png 1600w, images/Kitchem.png 1927w">
       </div>
-      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="kitchem.html"><h3 class="project-heading">Kitchem</h3><p class="project-description">How I did research on learning with designing an educational game teaching middle schoolers how to balance chemical equations.</p></a><a class="project-button w-button" href="kitchem.html">Read more</a>
+      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="kitchem.html"><h3 class="project-heading">Kitchem</h3><p class="project-description">I researched on how concrete instructions can improve learning, using an educational game I designed to teach chemical equation balancing.</p></a><a class="project-button w-button" href="kitchem.html">Read more</a>
       </div>
       <div class="w-col w-col-1"></div>
     </div>
@@ -80,7 +80,7 @@
       <div class="w-col w-col-1"></div>
       <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/gallery.png" srcset="images/gallery-p-500x291.png 500w, images/gallery-p-800x465.png 800w, images/gallery-p-1080x628.png 1080w, images/gallery-p-1600x930.png 1600w, images/gallery.png 1927w">
       </div>
-      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="gallery.html"><h3 class="project-heading">Previous Work Gallery</h3><p class="project-description">The tangible interaction, design challenge, IBM internship and other projects that I've done during my undergrad years.</p></a><a class="project-button w-button" href="gallery.html">Read more</a>
+      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="gallery.html"><h3 class="project-heading">Previous Projects</h3><p class="project-description">The tangible interaction, design challenge, IBM internship and other projects that I've done during my undergrad years.</p></a><a class="project-button w-button" href="gallery.html">Read more</a>
       </div>
       <div class="w-col w-col-1"></div>
     </div>
