--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="intro-container w-container">
       <h1 class="introemoji">🎉</h1>
       <h1 class="intro-text1">I design to bring delightful and easy-to-use experiences.</h1>
-      <p class="intro-text2">Hi, I’m Qinwei, a thoughtful design thinker and also a passionate implementer. Currently, I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. Previously, I interned at&nbsp;<span class="intro-highlight">IBM</span> and <span class="intro-highlight">a Start-up called Bri Studio</span> I got my bachelor's degree in <span>Beijing University of Posts and Telecommunications</span>.&nbsp;</p>
+      <p class="intro-text2">Hi, I’m Qinwei, a thoughtful design thinker and also a passionate implementer. Currently, I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. Previously, I interned at&nbsp;<span class="intro-highlight">IBM</span> and <span class="intro-highlight">a Start-up called Bri Studio</span>. I got my bachelor's degree in <span>Beijing University of Posts and Telecommunications</span>.&nbsp;</p>
       <p class="section-title">------
         <br><span class="intro-highlight">With <span xmlns="http://www.w3.org/1999/xhtml" class="intro-highlight intro-highlight-colored">my projects</span>,&nbsp;I'm iterating myself to become a better designer &gt;&gt;&gt;</span>
       </p>
