--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 <body>
   <div class="nav w-nav" data-animation="default" data-collapse="medium" data-duration="400">
     <div class="nav-content w-container"><a class="brand w-nav-brand" href="index.html" id="homepage"><h1 class="brandtext">Qinwei Zhu</h1></a>
-      <nav class="nav-menu w-nav-menu" role="navigation"><a class="navlink w-nav-link" href="index.html">Project</a><a class="navlink w-nav-link" href="about.html">About</a><a class="navlink w-nav-link" href="#">Resume</a>
+      <nav class="nav-menu w-nav-menu" role="navigation"><a class="navlink w-nav-link" href="index.html">Project</a><a class="navlink w-nav-link" href="about.html">About</a><a class="navlink w-nav-link" href="resume/resume_QinweiZhu.pdf">Resume</a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="menu-icon w-icon-nav-menu"></div>
@@ -48,7 +48,7 @@
           <blockquote class="quote-text">How I see myself</blockquote>
           <p class="about-intro">Just like those concentric circles! The outside me is active. I enjoy design, learning, sports and adventure.
             <br>The middle me is contemplative. I observe, communicate, think, reflect, and solve problems.
-            <br>The inner me, I keep it solid and simple. It is my sincere desire to serve the great and bring happiness to people.</p>
+            <br>The inner me, I keep solid and simple. It is my sincere desire to serve the great and bring happiness to people.</p>
         </div>
         <div class="circle-column2 w-col w-col-5">
           <div class="about-circle-l">
