--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   <div class="intro-section">
     <div class="intro-container w-container">
       <h1 class="introemoji">🎉</h1>
-      <h1 class="intro-text1">I design to bring delightful and easy-to-use experiences.</h1>
-      <p class="intro-text2">Hi, I’m Qinwei, a thoughtful design thinker and also a passionate implementer. Currently, I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. Previously, I interned at&nbsp;<span class="intro-highlight">IBM</span> and <span class="intro-highlight">a Start-up called Bri Studio</span>. I got my bachelor's degree in <span>Beijing University of Posts and Telecommunications</span>.&nbsp;</p>
+      <h1 class="intro-text1">I design to bring thoughtful and delightful experiences.</h1>
+      <p class="intro-text2">Hi, I’m Qinwei, a high-perspective product thinker and also a detailed-level design implementer. Currently, I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. Previously, I interned at&nbsp;<span class="intro-highlight">IBM</span> and <span class="intro-highlight">a Start-up called Bri Studio</span>. I got my bachelor's degree in <span>Beijing University of Posts and Telecommunications</span>.&nbsp;</p>
       <p class="section-title">------
-        <br><span class="intro-highlight">With <span xmlns="http://www.w3.org/1999/xhtml" class="intro-highlight intro-highlight-colored">my projects</span>,&nbsp;I'm iterating myself to become a better designer &gt;&gt;&gt;</span>
+        <br>With <span class="intro-highlight">my projects</span>,&nbsp;I'm iterating myself to become a better designer &gt;&gt;&gt;
       </p>
     </div>
   </div>
@@ -50,7 +50,7 @@
       <div class="w-col w-col-1"></div>
       <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/fitcat.png" srcset="images/fitcat-p-500x307.png 500w, images/fitcat-p-800x491.png 800w, images/fitcat-p-1080x662.png 1080w, images/fitcat-p-1600x981.png 1600w, images/fitcat-p-2000x1226.png 2000w, images/fitcat-p-2600x1594.png 2600w, images/fitcat.png 2878w">
       </div>
-      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="fitcat.html"><h3 class="project-heading">Fitcat 2.0</h3><p class="project-description">How I execute detailed-level interaction design and apply metaphors to make the app easy to use.</p></a><a class="project-button w-button" href="fitcat.html">Read more</a>
+      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="fitcat.html"><h3 class="project-heading">Fitcat 2.0</h3><p class="project-description">I executed detailed-level interaction design and applied metaphors to make the app easy to understand.</p></a><a class="project-button w-button" href="fitcat.html">Read more</a>
       </div>
       <div class="w-col w-col-1"></div>
     </div>
