--- a/witus.html
+++ b/witus.html
@@ -90,7 +90,7 @@
       <div class="proj-tab w-tabs">
         <div class="w-tab-menu">
           <a class="proj-tab-link w--current w-inline-block w-tab-link" data-w-tab="Tab 1">
-            <div>Results</div>
+            <div>Key Findings</div>
           </a>
           <a class="proj-tab-link w-inline-block w-tab-link" data-w-tab="Tab 2">
             <div>Process</div>
@@ -132,9 +132,9 @@
         </div>
       </div>
       <h4 class="proj-section-title">Initial Approach</h4>
-      <blockquote class="quote"><span class="quote-text">The safest plan is always in the blue sea.</span>
+      <blockquote class="quote"><span class="quote-text">The safest plan is not always the best plan.</span>
       </blockquote>
-      <p class="proj-text">We came up with an international students version of LinkedIn Jobs and Handshake. Our initial design has 4 basic ideas:</p>
+      <p class="proj-text">We came up with job posting platform for international students. Our initial design has 4 basic ideas:</p>
       <ul class="proj-list">
         <li class="proj-list-item">Visualized Educational Content of Work Authorization information</li>
         <li class="proj-list-item">Job posting list that are searchable and filterable by sponsorship and E-Verify</li>
@@ -165,7 +165,7 @@
         <li class="proj-list-item"><span class="proj-highlight">"I really like the browser extension, can you develop it right away?"<br xmlns="http://www.w3.org/1999/xhtml"></span><span class="witus-ia-conclusion">I am glad we finally got some compliments.:)</span>
         </li>
       </ol>
-      <h4 class="proj-section-title">➡️A Big Iteration</h4>
+      <h4 class="proj-section-title">New Approach</h4>
       <blockquote class="quote"><span class="quote-text">Deeper understanding of the user brings us the opportunity of supporting user's behavior rather than changing it.</span>
       </blockquote>
       <p class="proj-text">To find new opportunities, we revisited our interview note and iterated our persona. This time, I noticed two interesting fact that we ignored before:&nbsp;</p>
