--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   <div class="intro-section">
     <div class="intro-container w-container">
       <h1 class="introemoji">🎉</h1>
-      <h1 class="intro-text1">I design to bring thoughtful and delightful experiences.</h1>
-      <p class="intro-text2">Hi, I’m Qinwei, a high-perspective product thinker and also a detailed-level design implementer. Currently, I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. Previously, I interned at&nbsp;<span class="intro-highlight">IBM</span> and <span class="intro-highlight">a Start-up called Bri Studio</span>. I got my bachelor's degree in <span>Beijing University of Posts and Telecommunications</span>.&nbsp;</p>
+        <h1 class="intro-text1">I design digital products <br /> to bring thoughtful and delightful experiences.</h1>
+      <p class="intro-text2">Hi, I’m Qinwei, a high-level product thinker and also a detailed-level design implementer. Currently, I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. Previously, I interned at&nbsp;<span class="intro-highlight">IBM</span> and <span class="intro-highlight">a Startup called Bri Studio</span>. I got my bachelor's degree at <span>Beijing University of Posts and Telecommunications</span>.&nbsp;</p>
       <p class="section-title">------
-        <br>With <span class="intro-highlight">my projects</span>,&nbsp;I'm iterating myself to become a better designer &gt;&gt;&gt;
+        <br>With <span class="intro-highlight">my projects</span>,&nbsp;I'm iterating myself to become a better designer.
       </p>
     </div>
   </div>
