--- a/index.html
+++ b/index.html
@@ -38,21 +38,11 @@
   <div class="intro-section">
     <div class="intro-container w-container">
       <h1 class="introemoji">🎉</h1>
-        <h1 class="intro-text1">I design digital products <br /> to bring thoughtful and delightful experiences.</h1>
-      <p class="intro-text2">Hi, I’m Qinwei, a high-level product thinker and also a detailed-level design implementer. Currently, I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. Previously, I interned at&nbsp;<span class="intro-highlight">IBM</span> and <span class="intro-highlight">a Startup called Bri Studio</span>. I got my bachelor's degree at <span>Beijing University of Posts and Telecommunications</span>.&nbsp;</p>
+        <h1 class="intro-text1">I design thoughtful and delightful experiences.</h1>
+        <p class="intro-text2">Hi, I’m Qinwei, a high-level product thinker and a detailed-level design implementer. I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. I had experiences of interning in <span class="intro-highlight">IBM</span> and a <span class="intro-highlight">Startup</span> called Bri Studio. I'm currently <span class="intro-highlight">looking for a full-time position as a product designer</span>.</p> 
       <p class="section-title">------
         <br>With <span class="intro-highlight">my projects</span>,&nbsp;I'm iterating myself to become a better designer.
       </p>
-    </div>
-  </div>
-  <div class="project-2">
-    <div class="project-row w-row">
-      <div class="w-col w-col-1"></div>
-      <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/fitcat.png" srcset="images/fitcat-p-500x307.png 500w, images/fitcat-p-800x491.png 800w, images/fitcat-p-1080x662.png 1080w, images/fitcat-p-1600x981.png 1600w, images/fitcat-p-2000x1226.png 2000w, images/fitcat-p-2600x1594.png 2600w, images/fitcat.png 2878w">
-      </div>
-      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="fitcat.html"><h3 class="project-heading">Fitcat 2.0</h3><p class="project-description">I executed detailed-level interaction design and applied metaphors to make the app easy to understand.</p></a><a class="project-button w-button" href="fitcat.html">Read more</a>
-      </div>
-      <div class="w-col w-col-1"></div>
     </div>
   </div>
   <div class="project-1">
@@ -61,6 +51,16 @@
       <div class="w-col w-col-5"><img class="project1-img" src="images/proj1.1-svg.svg">
       </div>
       <div class="w-col w-col-5"><a class="project-link w-inline-block" href="witus.html"><h3 class="project-heading">WITUS&nbsp;</h3><p class="project-description">I designed user-centered web application to help international students find work authorization information.</p></a><a class="project-button w-button" href="witus.html">Read more</a>
+      </div>
+      <div class="w-col w-col-1"></div>
+    </div>
+  </div>
+    <div class="project-2">
+    <div class="project-row w-row">
+      <div class="w-col w-col-1"></div>
+      <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/fitcat.png" srcset="images/fitcat-p-500x307.png 500w, images/fitcat-p-800x491.png 800w, images/fitcat-p-1080x662.png 1080w, images/fitcat-p-1600x981.png 1600w, images/fitcat-p-2000x1226.png 2000w, images/fitcat-p-2600x1594.png 2600w, images/fitcat.png 2878w">
+      </div>
+      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="fitcat.html"><h3 class="project-heading">Fitcat 2.0</h3><p class="project-description">I executed detailed-level interaction design and applied metaphors to make the app easy to understand.</p></a><a class="project-button w-button" href="fitcat.html">Read more</a>
       </div>
       <div class="w-col w-col-1"></div>
     </div>
@@ -88,7 +88,7 @@
   <div>
     <div class="w-container">
       <p class="section-title">------
-        <br>Thank you for your time reviewing my work!&nbsp;Please feel free to reach out if you have any thoughts to share!😁</p>
+        <br>Thank you for your time reviewing my work!&nbsp; If you are interested, feel free to explore more <span class="intro-highlight"><a style="color: #464646" href="about.html">about me</a></span> or take a look at <span class="intro-highlight"><a style="color: #464646" href="resume/resume_QinweiZhu.pdf">my resume</a></span>. Also, you are welcomed to reach out and share your thoughts with me!😁</p>
       <div class="socialmedia-box"><a class="socialmedia-link" href="mailto:qz265@cornell.edu">Email</a><a class="socialmedia-link" href="https://www.linkedin.com/in/qinwei-zhu-116427129" target="_blank">LinkedIn</a><a class="socialmedia-link" href="https://medium.com/@qinweizhu" target="_blank">Medium</a><a class="socialmedia-link" href="https://www.instagram.com/qinweizzz/" target="_blank">Instagram</a>
       </div>
     </div>
