Updates before the career fair

--- a/witus.html
+++ b/witus.html
@@ -165,7 +165,7 @@
         <li class="proj-list-item"><span class="proj-highlight">"I really like the browser extension, can you develop it right away?"<br xmlns="http://www.w3.org/1999/xhtml"></span><span class="witus-ia-conclusion">I am glad we finally got some compliments.:)</span>
         </li>
       </ol>
-      <h4 class="proj-section-title">New Approach</h4>
+      <h4 class="proj-section-title">New Approach </h4>
       <blockquote class="quote"><span class="quote-text">Deeper understanding of the user brings us the opportunity of supporting user's behavior rather than changing it.</span>
       </blockquote>
       <p class="proj-text">To find new opportunities, we revisited our interview note and iterated our persona. This time, I noticed two interesting fact that we ignored before:&nbsp;</p>
@@ -213,7 +213,10 @@
       <div class="proj-pic-title">- Mid-fidelity Prototype -</div>
       <p class="proj-text">Based on the result of heuristic evaluation, we improved detailed-level interaction and visual design and created a<span class="proj-highlight"> high-fidelity prototype.</span>
       </p>
-      <div class="witus-background-box"><img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/new-model.png" srcset="images/new-model-p-500x335.png 500w, images/new-model-p-800x535.png 800w, images/new-model-p-1080x722.png 1080w, images/new-model.png 1448w">
+      <div class="witus-background-box">
+          <div class="w-embed w-video" style="padding-top: 56.17021276595745%;">
+        <iframe class="embedly-embed" src="https://www.youtube.com/embed/wElHv0cLQV4" scrolling="no" frameborder="0" allowfullscreen=""></iframe>
+      </div>
       </div>
       <div class="proj-pic-title">- High-fidelity Prototype -</div>
       <h4 class="proj-section-title">Usability Testing</h4>
