--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="project-1">
     <div class="project-row w-row">
       <div class="w-col w-col-1"></div>
-      <div class="w-col w-col-5"><img class="project1-img" src="images/proj1.1-svg.svg">
+      <div class="w-col w-col-5"><img class="project1-img" src="images/Group-11.png">
       </div>
       <div class="w-col w-col-5"><a class="project-link w-inline-block" href="witus.html"><h3 class="project-heading">WITUS&nbsp;</h3><p class="project-description">I designed user-centered web application to help international students find work authorization information.</p></a><a class="project-button w-button" href="witus.html">Read more</a>
       </div>
