--- a/fitcat.html
+++ b/fitcat.html
@@ -148,30 +148,30 @@
       </div>
       <div class="proj-pic-title">- Previous Playlist alike "Favorite Page"-</div>
       <p class="proj-text">Then, we had a critique session with our clients Paul and Bruce. Because the elderly are not familiar with the "like" functionality from music apps, it was hard for them to understand the "Favorite" tab in our first design. The new challenge became how to design the "Favorite" functionality in a way that makes sense to the elderly.</p>
-      <p class="proj-text">During the meeting, Paul mentioned that he wanted to name the feeding function "Kitty's bowl", which gave me the inspiration of borrowing the experience from real life rather than from similar digital products. I then introduced a design called "cupboard". The cupboard will hold users' favorite kinds of food, and have a extra food market where users can add food to there cupboard.</p>
+      <p class="proj-text">During the meeting, Paul mentioned that he wanted to name the feeding function "Kitty's bowl," which gave me the inspiration of borrowing the experience from real life rather than from similar digital products. I then introduced a design called "cupboard." The cupboard will hold users' favorite kinds of food and have an extra food market where users can add food to their cupboard.</p>
       <div class="fitcat-box fitcat-box-padding"><img class="kitchem-img" sizes="(max-width: 767px) 57vw, (max-width: 991px) 436.796875px, 564px" src="images/fitcat7.png" srcset="images/fitcat7-p-500x345.png 500w, images/fitcat7-p-800x552.png 800w, images/fitcat7-p-1080x745.png 1080w, images/fitcat7.png 1598w">
       </div>
       <div class="proj-pic-title">- The Cupboard Design -</div>
-      <p class="proj-text">The cupboard design became the most acclaimed feature in our user test. Participants thought it's easy to understand and easy to manage.</p>
-      <blockquote class="quote"><span class="quote-text">Visualization of the process makes the app encouraging and warning.</span>
+      <p class="proj-text">The cupboard design became the most acclaimed feature in our user test. Participants thought it was easy to understand and easy to manage.</p>
+      <blockquote class="quote"><span class="quote-text">Visualization of the process motivates users and informs them of cats' statuses</span>
       </blockquote>
-      <p class="proj-text">Another important part that we haven't dive into in the first iteration is the visualization of historical data. There are two goals of data visualization in this app:&nbsp;</p>
+      <p class="proj-text">Another important part that we hadn't looked into was the visualization of historical data. There are two goals of data visualization in this app:&nbsp;</p>
       <ol class="proj-list">
-        <li class="proj-list-item">To encourage people to stick to this app and form a good habit of feeding their cats</li>
-        <li class="proj-list-item">To warn users if they have fed improperly.<span class="witus-ia-conclusion"><br></span>
+        <li class="proj-list-item">To encourage people to stick to this app and form a good habit of feeding their cats regularly.</li>
+        <li class="proj-list-item">To warn users if they have been feeding their cats improperly.<span class="witus-ia-conclusion"><br></span>
         </li>
       </ol>
       <p class="proj-text">To achieve these two goals, we needed to decide what kind of data is meaningful and how to make the visualizations easy to understand and pleasant. We came up with a list of data and their visualization forms.</p>
       <ol class="proj-list">
-        <li class="proj-list-item">The progress of the whole diet process - showed as a circled progress bar around the avatar of the cat.</li>
-        <li class="proj-list-item">How many calories the owner feed each day and how many remain to be fed.</li>
-        <li class="proj-list-item">How the plan is accomplished in the past months and years.</li>
+        <li class="proj-list-item">The progress of the whole diet process - showed as a circular progress bar around the avatar of the cat.</li>
+        <li class="proj-list-item">How many calories the cat has consumed and how much remains to be eaten.</li>
+        <li class="proj-list-item">How the diet plan was accomplished in the past months and years.</li>
         <li class="proj-list-item">The data view and graph view of weigh-ins.</li>
       </ol>
       <div class="fitcat-box fitcat-box-padding"><img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/fitcat8.png" srcset="images/fitcat8-p-500x207.png 500w, images/fitcat8-p-800x331.png 800w, images/fitcat8-p-1080x446.png 1080w, images/fitcat8-p-1600x661.png 1600w, images/fitcat8-p-2000x826.png 2000w, images/fitcat8-p-2600x1074.png 2600w, images/fitcat8-p-3200x1322.png 3200w, images/fitcat8.png 4042w">
       </div>
-      <div class="proj-pic-title">- Visualization of the Feed and Weight Logs -</div>
-      <p class="proj-text">Also, we wanted the users to be aware of how many calories each meal has as well as when a feeding exceed the total calories amount, and in turn the users can adjust their feeding habits. So we made the progress bar for today's feeding consistent through the whole app.</p>
+      <div class="proj-pic-title">- Visualization of the Feeding and Weight Logs -</div>
+      <p class="proj-text">Also, we wanted the users to be aware of how many calories each meal has as well as when a feeding exceeds the total calories amount, and in turn the users can adjust their cat feeding habits. So we made the progress bar for today's feeding consistent throughout the whole app.</p>
       <div class="fitcat-box"><img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/fitcat9.png" srcset="images/fitcat9-p-500x231.png 500w, images/fitcat9-p-800x370.png 800w, images/fitcat9-p-1080x499.png 1080w, images/fitcat9-p-1600x739.png 1600w, images/fitcat9-p-2000x924.png 2000w, images/fitcat9-p-2600x1201.png 2600w, images/fitcat9.png 3025w">
       </div>
       <div class="fitcat-box"></div>
@@ -182,7 +182,7 @@
         <iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FRzCTYsTNkMY%3Ffeature%3Doembed&url=http%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DRzCTYsTNkMY&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FRzCTYsTNkMY%2Fhqdefault.jpg&key=c4e54deccf4d4ec997a64902e9a30300&type=text%2Fhtml&schema=youtube" scrolling="no" frameborder="0" allowfullscreen=""></iframe>
       </div>
       <div class="proj-pic-title">- Video -</div>
-      <p class="proj-text">Now, FitCat is still under development, and I am still iterating the design. We look forward to introducing FitCat to the public in the near future.</p>
+      <p class="proj-text">Now, FitCat is still under development, and I am still improving the design. We look forward to introducing FitCat to the public in the near future.</p>
       <div class="fitcat-box fitcat-box-padding"><img class="kitchem-img" sizes="(max-width: 767px) 57vw, (max-width: 991px) 436.796875px, 564px" src="images/IMG_3147.png" srcset="images/IMG_3147-p-500x393.png 500w, images/IMG_3147-p-800x628.png 800w, images/IMG_3147-p-1080x847.png 1080w, images/IMG_3147.png 1315w">
       </div>
       <div class="proj-pic-title">- Team Photo -</div>
@@ -197,7 +197,7 @@
         <a class="next-link w-inline-block" href="witus.html">
           <div class="next-label">Next</div>
           <div class="next-title">Working in the U.S.</div>
-          <div class="next-description">How deep understanding of users brought a innovative solution.</div>
+          <div class="next-description">How deep understanding of users brought an innovative solution.</div>
         </a>
       </div>
       <div class="w-col w-col-1"></div>
