--- a/kitchem.html
+++ b/kitchem.html
@@ -199,7 +199,7 @@
         </div>
       </div>
       <h4 class="proj-section-title">Experiment Design</h4>
-      <blockquote class="quote"><span style="font-size: 20px;">How engaging our game is? Do users really learn from it?</span>
+      <blockquote class="quote"><span style="font-size: 20px;">How engaging is our game? Do users really learn from it?</span>
       </blockquote>
       <p class="proj-text">We collect data from the following two aspects:</p>
       <ol class="proj-list">
