update resume, navigation, first line

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
       <div class="w-row">
         <div class="circle-column1 w-col w-col-7">
           <blockquote class="quote-text">How I see myself</blockquote>
-          <p class="about-intro">Just like those concentric circles! The outside me is active. I enjoy design, learning, sports and adventure.
+          <p class="about-intro">Just like those concentric circles! The outside me is active. I like springboard diving, hip hop dancing, photography and film creation.
             <br>The middle me is contemplative. I observe, communicate, think, reflect, and solve problems.
             <br>The inner me, I keep solid and simple. It is my sincere desire to serve the great and bring happiness to people.</p>
         </div>
