--- a/fitcat.html
+++ b/fitcat.html
@@ -191,13 +191,20 @@
   <div class="footer">
     <div class="w-row">
       <div class="w-col w-col-1"></div>
-      <div class="w-col w-col-5"></div>
+      <div class="w-col w-col-5">
+           <div class="project-divider-left"></div>
+        <a class="next-link w-inline-block" href="witus.html">
+          <div class="last-label">Last</div>
+          <div class="last-title">WITUS</div>
+          <div class="last-description">Thorough understanding of users brought an innovative solution.</div>
+        </a>
+    </div>
       <div class="w-clearfix w-col w-col-5">
         <div class="proj-divider-right"></div>
-        <a class="next-link w-inline-block" href="witus.html">
+        <a class="next-link w-inline-block" href="kitchem.html">
           <div class="next-label">Next</div>
-          <div class="next-title">Working in the U.S.</div>
-          <div class="next-description">How deep understanding of users brought an innovative solution.</div>
+          <div class="next-title">Kitchem</div>
+          <div class="next-description">An educational game to teach chemical equation balancing.</div>
         </a>
       </div>
       <div class="w-col w-col-1"></div>
