--- a/gallery.html
+++ b/gallery.html
@@ -58,6 +58,23 @@
       <p class="proj-text">Designed and developed a website for visualizing campus energy consumption using Echarts.js and D3.js.</p><img sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" src="images/gallery4.png" srcset="images/gallery4-p-500x214.png 500w, images/gallery4-p-800x343.png 800w, images/gallery4-p-1080x462.png 1080w, images/gallery4-p-1600x685.png 1600w, images/gallery4.png 1946w">
     </div>
   </div>
+    <div class="footer">
+    <div class="w-row">
+      <div class="w-col w-col-1"></div>
+      <div class="w-col w-col-5">
+           <div class="project-divider-left"></div>
+        <a class="next-link w-inline-block" href="kitchem.html">
+          <div class="last-label">Last</div>
+          <div class="last-title">Kitchem</div>
+          <div class="last-description">An educational game to teach chemical equation balancing.</div>
+        </a>
+    </div>
+      <div class="w-clearfix w-col w-col-5">
+        
+      </div>
+      <div class="w-col w-col-1"></div>
+    </div>
+  </div>
   <div class="center-box socialmedia-box gallery-footer"><a class="socialmedia-link" href="mailto:qz265@cornell.edu">Email</a><a class="socialmedia-link" href="https://www.linkedin.com/in/qinwei-zhu-116427129" target="_blank">LinkedIn</a><a class="socialmedia-link" href="https://medium.com/@qinweizhu" target="_blank">Medium</a><a class="socialmedia-link" href="https://www.instagram.com/qinweizzz/" target="_blank">Instagram</a>
     <div class="footer-text">© 2017&nbsp;By Qinwei Zhu</div>
   </div>
