--- a/witus.html
+++ b/witus.html
@@ -288,19 +288,13 @@
     <div class="w-row">
       <div class="w-col w-col-1"></div>
       <div class="w-col w-col-5">
-        <div class="project-divider-left"></div>
-        <a class="next-link w-inline-block" href="fitcat.html">
-          <div class="last-label">Last</div>
-          <div class="last-title">FitCat</div>
-          <div class="last-description">Detailed-interaction design and high level product thinking</div>
-        </a>
       </div>
       <div class="w-clearfix w-col w-col-5">
         <div class="proj-divider-right"></div>
-        <a class="next-link w-inline-block" href="kitchem.html">
+        <a class="next-link w-inline-block" href="fitcat.html">
           <div class="next-label">Next</div>
-          <div class="next-title">Kitchem</div>
-          <div class="next-description">Educational game design and academic research.</div>
+          <div class="next-title">FitCat</div>
+          <div class="next-description">An iOS application that helps cat lose weight.</div>
         </a>
       </div>
       <div class="w-col w-col-1"></div>
