--- a/kitchem.html
+++ b/kitchem.html
@@ -226,8 +226,8 @@
         <div class="project-divider-left"></div>
         <a class="next-link w-inline-block" href="fitcat.html">
           <div class="last-label">Last</div>
-          <div class="last-title">Working in the U.S.</div>
-          <div class="last-description">How deep understanding of users brought a innovative solution.</div>
+          <div class="last-title">FitCat</div>
+          <div class="last-description">An iOS application that helps cat lose weight.</div>
         </a>
       </div>
       <div class="w-clearfix w-col w-col-5">
