--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="intro-section">
     <div class="intro-container w-container">
       <h1 class="introemoji">🎉</h1>
-        <h1 class="intro-text1">I am an innovative problem-solver, an active user advocator and a versatile design implementer.</h1>
+        <h1 class="intro-text1">I am an innovative problem-solver, an active user advocator, and a versatile design implementer.</h1>
         <p class="intro-text2">Hi, I'm Qinwei! I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. I had experiences of interning in <span class="intro-highlight">IBM</span> and a <span class="intro-highlight">Startup</span> called Bri Studio. I'm currently <span class="intro-highlight">looking for a full-time position as a product designer</span>.</p> 
       <p class="section-title">------
         <br>With <span class="intro-highlight">my projects</span>,&nbsp;I'm iterating myself to become a better designer.
